# vidcrawler

./: .gitignore  MANIFEST.in  README.md  activate  clean  install  lint  pyproject.toml  requirements.testing.txt  requirements.txt  setup.py  test  tox.ini  upload_package.sh
.github/workflows/: test_bitchute.yml  test_brighteon.yml  test_gabtv.yml  test_macos.yml  test_odysee.yml  test_rumble.yml  test_spotify.yml  test_ubuntu.yml  test_win.yml  test_youtube.yml
vidcrawler/: Dockerfile  __init__.py  bitchute.py  brighteon.py  brighteon_bot.py  cli_fetch_rumble_channel.py  cmd.py  date.py  downloadmp3.py  error.py  fetch_html.py  fetcher.py  gabtv.py  generic_downloader.py  io.py  libary.py  library.py  library_json.py  odysee.py  playwright_launcher.py  rumble.py  rumble_bot.py  run_tests.py  spider.py  spotify.py  spreaker.py  types.py  version.py  video_info.py  youtube.py  youtube_bot.py  youtube_pull.py  ytdlp.py
vidcrawler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vidcrawler/testing/: bad_library.json  fetch_list.json  simple_http_server.py  test_bad_video.py  test_basic.py  test_cmd.py  test_generic_downloader.py  test_io.py  test_playwright.py  test_scraper_bitchute.py  test_scraper_brighteon.py  test_scraper_gabtv.py  test_scraper_odysee.py  test_scraper_rumble.py  test_scraper_spotify.py  test_scraper_spreaker.py  test_scraper_youtube.py  test_videoinfo.py  test_youtube_bot.py
vidcrawler/tests/: test.py
vids_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
