[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "vidcrawler"
description = "Video Crawler"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "version"]
license = { text = "MIT" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.mypy]
# disable type checking
ignore_missing_imports = true


[tool.black]
line-length = 200
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[project.scripts]
vidcrawler = "vidcrawler.cmd:main"
vidcrawler_test = "vidcrawler.run_tests:main"
youtube-pull-channel = "vidcrawler.youtube_pull:main"
brighteon-pull-channel = "vidcrawler.brighteon_bot:main"
